--- a/project-ml-microservice-kubernetes/Makefile
+++ b/project-ml-microservice-kubernetes/Makefile
@@ -6,9 +6,10 @@
 # (Optional) Build a simple integration test
 
 setup:
-	# Create python virtualenv & source it
-	# source ~/.devops/bin/activate
-	python3 -m venv ~/.devops
+	python3 -m venv ~/.P4
+	
+activate:
+	source ~/.P4/bin/activate
 
 install:
 	# This should be run from inside a virtualenv
